--- a/assets/sosoares/css/password.css
+++ b/assets/sosoares/css/password.css
@@ -1,5 +1,6 @@
 .mensagem {padding-left: 18px;}
 .texto {padding-left: 15px;}
-.caixa-texto {padding: 0 0 0 10px !important; border: 1px solid #107ca4; width: 54.2%;}
-.recuperar {padding-left: 538px;}
-.alterar {padding-left: 179px;}
+.texto label {margin-top: 5px;}
+.caixa-texto {padding: 0 0 0 10px !important; border: 1px solid #107ca4; width: 100%;}
+#recuperar {float: right;margin-top: 5px;}
+.alterar {float: right;margin-top: 5px;}
