--- a/assets/sosoares/css/candidatura.css
+++ b/assets/sosoares/css/candidatura.css
@@ -2,12 +2,18 @@
 .candidatura {padding-left: 30px;}
 .apresentacao {margin-top: -13px;}
 .obrigatorio {display: inline-block; padding-left: 30px;}
-.botoes {float: right;margin: 15px 30px;}
+#row .col-md-12 {width: 98.1%;}
+.botoes {float: right;margin-top: 20px;}
 .botoes input {margin-left: 10px;}
 
 /*============================== MEDIA QUERIES ===================================*/
+@media screen and (max-width: 1217px) {
+	#row .col-md-12 {width: 100%;}
+}
+
 @media screen and (max-width: 1120px) {
 	.col-sm-10 input, .col-sm-10 textarea {margin-left: 5%;}
+	#row .col-md-12 {width: 103.8%;}
 }
 
 @media screen and (max-width: 992px) {
@@ -17,16 +23,13 @@
 @media screen and (max-width: 767px) {
 	.col-sm-10 input, .col-sm-10 textarea {margin-left: 0%;}
 	#row {padding-top: 80px;}
+	#row .col-md-12 {width: 100%;}
 }
 
 @media screen and (max-width: 600px) {
 	.candidatura {width: 100%;}
 }
 
-@media screen and (max-width: 365px) {
-	.botoes {margin: 15px 16px;}
-}
-
-@media screen and (max-width: 365px) {
+@media screen and (max-width: 350px) {
 	.botoes input {width: 120px;}
 }
