--- a/assets/sosoares/css/tabs.css
+++ b/assets/sosoares/css/tabs.css
@@ -78,6 +78,7 @@
     background: #fff;
     position: relative;
     /*width: 60%;*/
+    min-height: 250px;
     z-index: 5;
     box-shadow: 0 -2px 3px -2px rgba(0,0,0,0.2), 0 2px 2px rgba(0,0,0,0.1);
     border-radius: 0 3px 3px 3px;
