--- a/assets/sosoares/css/home.css
+++ b/assets/sosoares/css/home.css
@@ -70,13 +70,9 @@ header .row {position: relative;}
 .lingua {padding-right: 5px;}
 .ultima_lingua {width: 22px; height: 15px;}
 .inactive {
-    -webkit-filter: grayscale(100%);
-    -moz-filter: grayscale(100%);
-    -ms-filter: grayscale(100%);
-    -o-filter: grayscale(100%);
-    filter: grayscale(100%);
-    filter: url(grayscale.svg#greyscale); /* Firefox 4+ */
-    filter: gray; /* IE 6-9 */
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
+    filter: gray; /* IE6-9 */
+    -webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
 }
 
 /*============================== FOOTER =======================================*/
