--- a/assets/sosoares/css/registar.css
+++ b/assets/sosoares/css/registar.css
@@ -1,10 +1,18 @@
 .mensagem {padding-left: 18px;}
+.alert {display: none;width: 33.3%;margin-left: 15px;}
 .caixa-texto {margin-bottom: 10px; padding: 0 0 0 10px !important; border: 1px solid #107ca4;}
 .botoes {width: 247px;padding-top: 20px;}
 .botoes input {margin-left: 10px;float: right;}
+.codigo {display: flex;width: 247px;}
+.hifen {margin: 0 5px 0 5px;}
+#labelConcelho, #labelDistrito, #concelho, #distrito {display: none;}
+.row .col-md-4:nth-child(2) {width: 36.6%;}
 
 /*============================== MEDIA QUERIES ===================================*/
 @media screen and (max-width: 992px) {
 	.row .col-md-6 {margin-bottom: 10px;}
-	.row .col-md-4:nth-child(2) {padding-left: 44px;width: 78%!important;}
+}
+
+@media screen and (max-width: 581px) {
+	.row .col-md-4:nth-child(2) {padding-left: 44px;}
 }
