--- a/assets/sosoares/css/password.css
+++ b/assets/sosoares/css/password.css
@@ -1,6 +1,21 @@
-.mensagem {padding-left: 18px;}
+.mensagem {margin-left: 15px;width: 40%;}
+.alert {display: none;}
 .texto {padding-left: 15px;}
 .texto label {margin-top: 5px;}
 .caixa-texto {padding: 0 0 0 10px !important; border: 1px solid #107ca4; width: 100%;}
 #recuperar {float: right;margin-top: 5px;}
 .alterar {float: right;margin-top: 5px;}
+
+/*============================== MEDIA QUERIES ===================================*/
+@media screen and (max-width: 1030px) {
+	section > .container > .row .col-md-8 {display: inline-block;width: 70%;vertical-align: top;}
+}
+
+@media screen and (max-width: 850px) {
+	section > .container > .row .col-md-8 {width: 80%;}
+}
+
+@media screen and (max-width: 650px) {
+	section > .container > .row .col-md-8 {width: 90%;}
+	.mensagem {width: 60%;}
+}
