--- a/assets/sosoares/css/candidatura.css
+++ b/assets/sosoares/css/candidatura.css
@@ -1,10 +1,11 @@
-.mensagem {padding-left: 18px;}
+.alert {margin-left: 15px;width: 65%;}
+.mensagem {display: none;}
 .candidatura {padding-left: 30px;}
-.apresentacao {margin-top: -13px;}
 .obrigatorio {display: inline-block; padding-left: 30px;}
 #row .col-md-12 {width: 98.1%;}
 .botoes {float: right;margin-top: 20px;}
 .botoes input {margin-left: 10px;}
+.form-group label {padding: 0 15px;margin: 0;}
 
 /*============================== MEDIA QUERIES ===================================*/
 @media screen and (max-width: 1217px) {
