--- a/assets/sosoares/css/generic-styles.css
+++ b/assets/sosoares/css/generic-styles.css
@@ -160,6 +160,8 @@ nav, .navbar-nav > li:hover, .navbar-default .navbar-nav > .open > a, .navbar-de
     margin: 0 0 0 0;
 }
 
+.links {padding-right: 5px;}
+
 /*============================== SLIDER HOME =======================================*/
 .carousel2 {overflow: hidden;max-height: 410px;}
 .carousel-caption {
@@ -430,7 +432,7 @@ legend {font-size: 24px;padding: 15px 0 20px;font-weight: 500;}
     .contactus .row .col-md-6 .row .col-md-6 {width: 100%;display: block;text-align: center}
 
     section > .container > .row .col-md-8 {width: 100%}
-    section > .container > .row .col-md-4 {width: 80%}
+    section > .container > .row .col-md-4 {width: 100%}
     .col-md-4 p,.col-md-4 form,.col-md-4 button {margin: 0 10px 10px;}
 }
 
