--- a/assets/sosoares/css/inicio.css
+++ b/assets/sosoares/css/inicio.css
@@ -1,3 +1,4 @@
+.alert {display: none;width: 65%;}
 .destaque {padding-left: 30px;}
 .data-noticia {width: 27.6%;}
 .noticia {margin: 0 0 30px;padding-left: 0;}
@@ -23,14 +24,16 @@
 
 @media screen and (max-width: 1184px) {
 	.data-noticia {margin-left: -5px;}
+	.texto {padding-left: 10px;}
 }
 
 @media screen and (max-width: 992px) {
 	.noticia {margin: 0;}
+	.texto p {padding-left: 6px;}
 }
 
 @media screen and (max-width: 580px) {
+	.btn {float: right;}
 	.col-md-4 .title1 {margin: 0 10px 10px;}
-	.col-md-4 {width: 60%!important;}
-	.mensagem {padding-left: 10px;}
+	.mensagem {margin-left: 10px;}
 }
