--- a/assets/sosoares/css/registar.css
+++ b/assets/sosoares/css/registar.css
@@ -1,12 +1,13 @@
 .mensagem {padding-left: 18px;}
-.alert {display: none;width: 33.3%;margin-left: 15px;}
+.alert {display: none;width: calc(100% - 66.7%);margin-left: 15px;}
 .caixa-texto {margin-bottom: 10px; padding: 0 0 0 10px !important; border: 1px solid #107ca4;}
 .botoes {width: 247px;padding-top: 20px;}
 .botoes input {margin-left: 10px;float: right;}
 .codigo {display: flex;width: 247px;}
-.hifen {margin: 0 5px 0 5px;}
+.hifen {margin: 0 5px 0 5px!important;}
 #labelConcelho, #labelDistrito, #concelho, #distrito {display: none;}
 .row .col-md-4:nth-child(2) {width: 36.6%;}
+.area {vertical-align: baseline;margin: 0 5px 0 0!important;}
 
 /*============================== MEDIA QUERIES ===================================*/
 @media screen and (max-width: 992px) {
@@ -14,5 +15,6 @@
 }
 
 @media screen and (max-width: 581px) {
-	.row .col-md-4:nth-child(2) {padding-left: 44px;}
+	.row .col-md-4:nth-child(2) {padding-left: 35px;}
+	.col-md-4 p, .col-md-4 form, .col-md-4 button {margin: 0 10px 10px 0;}
 }
