--- a/assets/sosoares/css/ie8/inicio.css
+++ b/assets/sosoares/css/ie8/inicio.css
@@ -1,1 +1,2 @@
-.carousel-caption {background-color: #A9A9A9;margin-right: -102px;}
+.carousel-caption {background-color: #A9A9A9;margin-right: -102px;width: 75%;}
+.icon-front {padding-left: 40px;}
