--- a/assets/sosoares/css/area-privada.css
+++ b/assets/sosoares/css/area-privada.css
@@ -20,7 +20,8 @@
 
 .alerta {padding-left: 15px;}
 .botao {margin: 20px 0 0 0;float: right;}
-.botao a {color: #fff!important;}
+.botao2 {float: right;clear: right;margin: 10px 0 0 0;}
+.botao a,.botao2 a {color: #fff!important;}
 .dados {width: 89.5%; padding-left: 15px;}
 .tabela {width: 100%;}
 
