--- a/assets/sosoares/css/home.css
+++ b/assets/sosoares/css/home.css
@@ -55,6 +55,8 @@ body {
     height: 100%;
 }
 
+#myModal {display: none;}
+
 a:hover {text-decoration: none;}
 header {width:100%;height:100px;padding:15px;}
 header .row {position: relative;}
